--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: HibiscusJMs'blog
+title: JM Blog
 SEOTitle: 金梦的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: 1273482861@qq.com
@@ -12,7 +12,7 @@ github_repo: "https://github.com/hibiscusJM/hibiscusJM.github.io.git" # you code
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/blog.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/head.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
