--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: JM Blog
-SEOTitle: 金梦的博客 | BY Blog
+SEOTitle: 金梦的博客 | JM Blog
 header-img: img/post-bg-desk.jpg
 email: 1273482861@qq.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog"
+keyword: "JM, JM Blog"
 url: "http://hibiscusJM.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/hibiscusJM/hibiscusJM.github.io.git" # you code repository
