--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: JM Blog
 SEOTitle: 金梦的博客 | JM Blog
-header-img: img/bgm.jpg
+header-img: img/bgm1.jpg
 email: 1273482861@qq.com
 description: "Every failure is leading towards success."
 keyword: "JM, JM Blog"
